--- a/neb/templates/index.html
+++ b/neb/templates/index.html
@@ -60,8 +60,8 @@
             </div>
             <div class="languages d-none d-md-flex align-items-center">
                 <ul>
-                    <li>En</li>
-                    <li><a href="#">De</a></li>
+                   <!-- <li>En</li> -->
+                   <!-- <li><a href="#">De</a></li> -->
                 </ul>
             </div>
         </div>
@@ -521,63 +521,26 @@
         <div class="container">
 
             <div class="row gy-4">
-
-                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="member">
-                        <img src="{% static 'assets/img/chefs/chefs-1.jpg' %}" class="img-fluid" alt="">
-                        <div class="member-info">
-                            <div class="member-info-content">
-                                <h4>Walter White</h4>
-                                <span>Master Chef</span>
-                            </div>
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter-x"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- End Team Member -->
-
-                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                    <div class="member">
-                        <img src="{% static 'assets/img/chefs/chefs-2.jpg' %}" class="img-fluid" alt="">
-                        <div class="member-info">
-                            <div class="member-info-content">
-                                <h4>Sarah Jhonson</h4>
-                                <span>Patissier</span>
-                            </div>
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter-x"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
+                {% for st in staf %}
+                    <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                        <div class="member">
+                            <img src="/media/{{ st.image }}" class="img-fluid" alt="">
+                            <div class="member-info">
+                                <div class="member-info-content">
+                                    <h4>{{ st.name }}</h4>
+                                    <span>{{ st.position }}</span>
+                                </div>
+                                <div class="social">
+                                    <a href="{{ st.X_link }}"><i class="bi bi-twitter-x"></i></a>
+                                    <a href="{{ st.facebook }}"><i class="bi bi-facebook"></i></a>
+                                    <a href="{{ st.instagram }}"><i class="bi bi-instagram"></i></a>
+                                    <a href="{{ st.linkedin }}"><i class="bi bi-linkedin"></i></a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div><!-- End Team Member -->
-
-                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
-                    <div class="member">
-                        <img src="{% static 'assets/img/chefs/chefs-3.jpg' %}" class="img-fluid" alt="">
-                        <div class="member-info">
-                            <div class="member-info-content">
-                                <h4>William Anderson</h4>
-                                <span>Cook</span>
-                            </div>
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter-x"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- End Team Member -->
-
+                    </div><!-- End Team Member -->
+                {% endfor %}
             </div>
-
         </div>
 
     </section><!-- /Chefs Section -->
