--- a/neb/templates/index.html
+++ b/neb/templates/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Nebraska Club|Lodge </title>
+    <title>Nebraska Lodge|Grill </title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
@@ -72,7 +72,7 @@
         <div class="container position-relative d-flex align-items-center justify-content-between">
             <a href="/" class="logo d-flex align-items-center me-auto me-xl-0">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="{% static 'assets/img/logo.png' %}" alt=""> -->
+               <!-- <img src="{% static 'assets/img/logo.png' %}" alt=""> -->
                 <h1 class="sitename">Club Nebraska</h1>
             </a>
 
@@ -107,7 +107,7 @@
             <div class="row">
                 <div class="col-lg-8 d-flex flex-column align-items-center align-items-lg-start">
                     <h2 data-aos="fade-up" data-aos-delay="100">Welcome to <span>Club Nebraska</span></h2>
-                    <p data-aos="fade-up" data-aos-delay="200">Delivering great foods and drinks for more than 18
+                    <p data-aos="fade-up" data-aos-delay="200">Delivering great foods and drinks for more than 10
                         years!</p>
                     <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
                         <a href="#menu" class="cta-btn">Our Menu</a>
@@ -390,7 +390,7 @@
                         <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <label for="time">Times</label>
+                        <label for="time">Time</label>
                         <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
                     </div>
                     <div class="col-lg-4 col-md-6">
@@ -677,18 +677,18 @@
             <div class="col-lg-2 col-md-3 footer-links">
                 <h4>Our Services</h4>
                 <ul>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Web Development</a></li>
-                    <li><a href="#">Product Management</a></li>
-                    <li><a href="#">Marketing</a></li>
-                    <li><a href="#">Graphic Design</a></li>
+                    <li><a href="#">Wedding Party</a></li>
+                    <li><a href="#">Birth Party</a></li>
+                    <li><a href="#">Conference</a></li>
+                    <li><a href="#">Private Meetings</a></li>
+                    <li><a href="#">Accommodation</a></li>
                 </ul>
             </div>
 
             <div class="col-lg-4 col-md-12 footer-newsletter">
                 <h4>Our Newsletter</h4>
                 <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-                <form action="forms/newsletter.php" method="post" class="php-email-form">
+                <form action="" method="post" class="php-email-form">
                     <div class="newsletter-form"><input type="email" name="email"><input type="submit"
                                                                                          value="Subscribe"></div>
                     <div class="loading">Loading</div>
