--- a/neb/templates/index.html
+++ b/neb/templates/index.html
@@ -489,7 +489,6 @@
         </div><!-- End Section Title -->
 
         <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
-
             <div class="row g-0">
                 {% for ga in gal %}
                     <div class="col-lg-3 col-md-4">
@@ -502,9 +501,7 @@
                     </div><!-- End Gallery Item -->
                 {% endfor %}
             </div>
-
         </div>
-
     </section><!-- /Gallery Section -->
 
     <!-- Chefs Section -->
@@ -721,6 +718,24 @@
 
 <!-- Main JS File -->
 <script src="{% static 'assets/js/main.js' %}"></script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        // Disable right-click on all images
+        document.querySelectorAll("img").forEach(img => {
+            img.addEventListener("contextmenu", function(event) {
+                event.preventDefault();
+            });
+        });
+
+        // Disable right-click inside the lightbox
+        document.addEventListener("contextmenu", function(event) {
+            if (event.target.tagName === "IMG") {
+                event.preventDefault();
+            }
+        });
+    });
+</script>
 
 </body>
 
