--- a/neb/static/assets/css/main.css
+++ b/neb/static/assets/css/main.css
@@ -1027,7 +1027,7 @@ section,
 # About Section
 --------------------------------------------------------------*/
 .about {
-  background: url("../img/about-bg.jpg") center center;
+  background: url("../img/about.jpg") center center;
   background-size: cover;
   position: relative;
   padding: 80px 0;
