--- a/neb/templates/index.html
+++ b/neb/templates/index.html
@@ -10,8 +10,8 @@
     <meta name="keywords" content="">
 
     <!-- Favicons -->
-    <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-    <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+    <link href="{% static 'assets/img/neb_logo.png' %}" rel="icon">
+    <link href="{% static 'assets/img/neb_logo.png' %}" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -56,7 +56,7 @@
         <div class="container d-flex justify-content-center justify-content-md-between">
             <div class="contact-info d-flex align-items-center">
                 <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">clubnebraska@gmail.com</a></i>
-                <i class="bi bi-phone d-flex align-items-center ms-4"><span>0700000000</span></i>
+                <i class="bi bi-phone d-flex align-items-center ms-4"><span>0707444742</span></i>
             </div>
             <div class="languages d-none d-md-flex align-items-center">
                 <ul>
@@ -72,7 +72,7 @@
         <div class="container position-relative d-flex align-items-center justify-content-between">
             <a href="/" class="logo d-flex align-items-center me-auto me-xl-0">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
-               <!-- <img src="{% static 'assets/img/logo.png' %}" alt=""> -->
+               <img src="{% static 'assets/img/remove.png' %}" alt="">
                 <h1 class="sitename">Club Nebraska</h1>
             </a>
 
@@ -129,7 +129,7 @@
 
             <div class="row gy-4">
                 <div class="col-lg-6 order-1 order-lg-2">
-                    <img src="{% static 'assets/img/about.jpg' %}" class="img-fluid about-img" alt="">
+                    <img src="{% static 'assets/img/neb-about.jpg' %}" class="img-fluid about-img" alt="">
                 </div>
                 <div class="col-lg-6 order-2 order-lg-1 content">
                     <h3>About us</h3>
@@ -296,7 +296,7 @@
     <!-- Events Section -->
     <section id="events" class="events section">
 
-        <img class="slider-bg" src="{% static 'assets/img/background.jpg' %}" alt="" data-aos="fade-in">
+        <img class="slider-bg" src="{% static 'assets/img/neb-event.jpg' %}" alt="" data-aos="fade-in">
 
         <div class="container">
 
