--- a/neb/templates/index.html
+++ b/neb/templates/index.html
@@ -648,13 +648,13 @@
                 </a>
                 <div class="footer-contact pt-3">
                     <p>Kisumu - Busia Road</p>
-                    <p>Ugunja, Siaya County</p>
-                    <p class="mt-3"><strong>Phone:</strong> <span>+254 70000000</span></p>
+                    <p>Ugunja, Siaya Kenya</p>
+                    <p class="mt-3"><strong>Phone:</strong> <span>0707444742</span></p>
                     <p><strong>Email:</strong> <span>clubnebraska@gmail.com</span></p>
                 </div>
                 <div class="social-links d-flex mt-4">
                     <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=61550605654299&rdid=6m4FQCErQqDpgeiM&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1C6Q7vjuUK%2F"><i class="bi bi-facebook"></i></a>
                     <a href=""><i class="bi bi-instagram"></i></a>
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
