--- a/admin_dashboard/static/css/color.css
+++ b/admin_dashboard/static/css/color.css
@@ -1,5 +1,5 @@
 /*------------------------------------------------------------------
-    File Name: color_2.css
+    File Name: color.css
 -------------------------------------------------------------------*/
 
 .topbar .navbar {
