--- a/admin_dashboard/templates/dashboard1/dashboard.html
+++ b/admin_dashboard/templates/dashboard1/dashboard.html
@@ -1,6 +1,22 @@
 {% extends 'dashboard1/layout.html' %}
 {% load static %}
 {% block body %}
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: left;
+            margin-top: 50px;
+        }
+
+        .total_no {
+            font-size: 24px;
+            font-weight: bold;
+            color: #007bff;
+        }
+    </style>
+
     <!-- dashboard inner -->
     <div class="midde_cont">
         <div class="container-fluid">
@@ -16,13 +32,13 @@
                     <div class="full counter_section margin_bottom_30">
                         <div class="couter_icon">
                             <div>
-                                <i class="fa fa-user yellow_color"></i>
+                                <i class="fa fa-user blue1_color"></i>
                             </div>
                         </div>
                         <div class="counter_no">
                             <div>
-                                <p class="total_no">2500</p>
-                                <p class="head_couter">Welcome</p>
+                                <p class="total_no" style="color: black">2500</p>
+                                <p class="head_couter" style="color: black">Site visitors</p>
                             </div>
                         </div>
                     </div>
@@ -31,13 +47,32 @@
                     <div class="full counter_section margin_bottom_30">
                         <div class="couter_icon">
                             <div>
-                                <i class="fa fa-clock-o blue1_color"></i>
+                                <i class="fa fa-clock blue1_color"></i>
                             </div>
                         </div>
                         <div class="counter_no">
                             <div>
-                                <p class="total_no">123.50</p>
-                                <p class="head_couter">Average Time</p>
+                                <p class="total_no" id="currentTime" style="color: black">Loading...</p>
+
+                                <script>
+                                    function updateTime() {
+                                        const now = new Date();
+                                        const hours = now.getHours().toString().padStart(2, '0');
+                                        const minutes = now.getMinutes().toString().padStart(2, '0');
+                                        const seconds = now.getSeconds().toString().padStart(2, '0');
+                                        const timeString = `${hours}:${minutes}:${seconds}`;
+
+                                        document.getElementById("currentTime").innerText = timeString;
+                                    }
+
+                                    // Update time every second
+                                    setInterval(updateTime, 1000);
+
+                                    // Initial call to set the time immediately
+                                    updateTime();
+                                </script>
+
+                                <p class="head_couter" style="color: black">Time</p>
                             </div>
                         </div>
                     </div>
@@ -46,13 +81,13 @@
                     <div class="full counter_section margin_bottom_30">
                         <div class="couter_icon">
                             <div>
-                                <i class="fa fa-cloud-download green_color"></i>
+                               <i class="fa-regular fa-calendar-check blue1_color"></i>
                             </div>
                         </div>
                         <div class="counter_no">
                             <div>
-                                <p class="total_no">1,805</p>
-                                <p class="head_couter">Collections</p>
+                                <p class="total_no" style="color: black">10</p>
+                                <p class="head_couter" style="color: black">Table Bookings</p>
                             </div>
                         </div>
                     </div>
@@ -61,13 +96,13 @@
                     <div class="full counter_section margin_bottom_30">
                         <div class="couter_icon">
                             <div>
-                                <i class="fa fa-comments-o red_color"></i>
+                                <i class="fa fa-comments red_color"></i>
                             </div>
                         </div>
                         <div class="counter_no">
                             <div>
-                                <p class="total_no">54</p>
-                                <p class="head_couter">Comments</p>
+                                <p class="total_no" style="color: black">54</p>
+                                <p class="head_couter" style="color: black">Messages</p>
                             </div>
                         </div>
                     </div>
@@ -295,93 +330,5 @@
                 </div>
                 <!-- end progress bar -->
             </div>
-            <div class="row column4 graph">
-                <div class="col-md-6">
-                    <div class="dash_blog">
-                        <div class="dash_blog_inner">
-                            <div class="dash_head">
-                                <h3><span><i class="fa fa-calendar"></i> 6 July 2018</span><span
-                                        class="plus_green_bt"><a href="#">+</a></span></h3>
-                            </div>
-                            <div class="list_cont">
-                                <p>Today Tasks for Ronney Jack</p>
-                            </div>
-                            <div class="task_list_main">
-                                <ul class="task_list">
-                                    <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>10:00
-                                        AM</strong></li>
-                                    <li><a href="#">Create new task for Dashboard</a><br><strong>10:00
-                                        AM</strong></li>
-                                    <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>11:00
-                                        AM</strong></li>
-                                    <li><a href="#">Create new task for Dashboard</a><br><strong>10:00
-                                        AM</strong></li>
-                                    <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>02:00
-                                        PM</strong></li>
-                                </ul>
-                            </div>
-                            <div class="read_more">
-                                <div class="center"><a class="main_bt read_bt" href="#">Read More</a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="dash_blog">
-                        <div class="dash_blog_inner">
-                            <div class="dash_head">
-                                <h3><span><i class="fa fa-comments-o"></i> Updates</span><span
-                                        class="plus_green_bt"><a href="#">+</a></span></h3>
-                            </div>
-                            <div class="list_cont">
-                                <p>User confirmation</p>
-                            </div>
-                            <div class="msg_list_main">
-                                <ul class="msg_list">
-                                    <li>
-                                                <span><img src="images/layout_img/msg2.png" class="img-responsive"
-                                                           alt="#"/></span>
-                                        <span>
-                                          <span class="name_user">John Smith</span>
-                                          <span class="msg_user">Sed ut perspiciatis unde omnis.</span>
-                                          <span class="time_ago">12 min ago</span>
-                                          </span>
-                                    </li>
-                                    <li>
-                                                <span><img src="images/layout_img/msg3.png" class="img-responsive"
-                                                           alt="#"/></span>
-                                        <span>
-                                          <span class="name_user">John Smith</span>
-                                          <span class="msg_user">On the other hand, we denounce.</span>
-                                          <span class="time_ago">12 min ago</span>
-                                          </span>
-                                    </li>
-                                    <li>
-                                                <span><img src="images/layout_img/msg2.png" class="img-responsive"
-                                                           alt="#"/></span>
-                                        <span>
-                                          <span class="name_user">John Smith</span>
-                                          <span class="msg_user">Sed ut perspiciatis unde omnis.</span>
-                                          <span class="time_ago">12 min ago</span>
-                                          </span>
-                                    </li>
-                                    <li>
-                                                <span><img src="images/layout_img/msg3.png" class="img-responsive"
-                                                           alt="#"/></span>
-                                        <span>
-                                          <span class="name_user">John Smith</span>
-                                          <span class="msg_user">On the other hand, we denounce.</span>
-                                          <span class="time_ago">12 min ago</span>
-                                          </span>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="read_more">
-                                <div class="center"><a class="main_bt read_bt" href="#">Read More</a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
 {% endblock %}
