--- a/admin_dashboard/templates/dashboard1/login.html
+++ b/admin_dashboard/templates/dashboard1/login.html
@@ -19,7 +19,7 @@
                             <p style="color: red;">{{ message }}</p>
                         {% endfor %}
                     {% endif %}
-                    <form id="registrationForm" action="/admin" method="post">
+                    <form id="registrationForm" action="" method="post">
                         {% csrf_token %}
                         <div class="form-group">
                             <label for="email">Username</label>
