--- a/admin_dashboard/templates/dashboard1/layout.html
+++ b/admin_dashboard/templates/dashboard1/layout.html
@@ -94,7 +94,7 @@
             <div class="sidebar_blog_1">
                 <div class="sidebar-header">
                     <div class="logo_section">
-                        <a href="/admin_dashboard"><img class="logo_icon img-responsive"
+                        <a href="/admin_board"><img class="logo_icon img-responsive"
                                               src="{% static 'images/logo/logo_icon.png' %}" alt="#"/></a>
                     </div>
                 </div>
