--- a/admin_dashboard/templates/dashboard1/layout.html
+++ b/admin_dashboard/templates/dashboard1/layout.html
@@ -118,7 +118,7 @@
                                 class="fa fa-dashboard yellow_color"></i> <span>Home</span></a>
                         <ul class="collapse list-unstyled" id="dashboard" style="background-color: #0ea432">
                             <li>
-                                <a href="/admin_dashboard"> <span>Home</span></a>
+                                <a href="/admin_board"> <span>Home</span></a>
                             </li>
 
                         </ul>
